rust/herb-highlighter/tests/snapshots/document_builder_test__builds_an_empty_content_document.snap
---
source: herb-highlighter/tests/document_builder_test.rs
expression: to_json(&document)
---
{
  "version": 1,
  "nodes": [
    {
      "type": "FileHeader",
      "path": "app/views/users/show.html.erb",
      "line": null,
      "column": null,
      "url": null
    },
    {
      "type": "CodeBlock",
      "kind": "Listing",
      "firstLine": 1,
      "runs": [],
      "lines": [
        {
          "number": 1,
          "emphasis": {
            "kind": "Normal"
          },
          "annotations": []
        }
      ]
    }
  ]
}
